Si le ponen la cancion

--- a/Reproductor/MainWindow.xaml
+++ b/Reproductor/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Reproductor"
         mc:Ignorable="d"
-        Title="MainWindow" Height="180" Width="464">
+        Title="MainWindow" Height="248.199" Width="458.41">
     <Grid>
         <Button x:Name="btnExaminar" Content="Examinar " HorizontalAlignment="Left" Margin="361,10,0,0" VerticalAlignment="Top" Width="69" Height="23" Click="BtnExaminar_Click"/>
         <TextBox x:Name="txtRutaArchivo" HorizontalAlignment="Left" Height="23" Margin="48,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="285"/>
@@ -15,6 +15,8 @@
         <TextBlock x:Name="lblTiempoActual" HorizontalAlignment="Left" Margin="48,82,0,0" TextWrapping="Wrap" Text="00:00:00" VerticalAlignment="Top"/>
         <TextBlock x:Name="lblTiempoTotal" HorizontalAlignment="Left" Margin="402,82,0,0" TextWrapping="Wrap" Text="00:00:00" VerticalAlignment="Top"/>
         <Slider x:Name="sldTiempo" HorizontalAlignment="Left" Margin="48,116,0,0" VerticalAlignment="Top" Width="398"/>
+        <Label Content="Elige dispositivo de salida:" HorizontalAlignment="Left" Margin="48,139,0,0" VerticalAlignment="Top" Width="149"/>
+        <ComboBox x:Name="cbDispositivoSalida" HorizontalAlignment="Left" Margin="48,170,0,0" VerticalAlignment="Top" Width="392"/>
 
     </Grid>
 </Window>
