--- a/Reproductor/MainWindow.xaml
+++ b/Reproductor/MainWindow.xaml
@@ -9,9 +9,9 @@
     <Grid>
         <Button x:Name="btnExaminar" Content="Examinar " HorizontalAlignment="Left" Margin="361,10,0,0" VerticalAlignment="Top" Width="69" Height="23" Click="BtnExaminar_Click"/>
         <TextBox x:Name="txtRutaArchivo" HorizontalAlignment="Left" Height="23" Margin="48,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="285"/>
-        <Button x:Name="btnReproducir" Content="Reproducir" HorizontalAlignment="Left" Margin="48,38,0,0" VerticalAlignment="Top" Width="69" Height="23"/>
-        <Button x:Name="btnPausa" Content="Pausa" HorizontalAlignment="Left" Margin="160,38,0,0" VerticalAlignment="Top" Width="69" Height="23"/>
-        <Button x:Name="btnDetener" Content="Detener" HorizontalAlignment="Left" Margin="264,38,0,0" VerticalAlignment="Top" Width="69" Height="23"/>
+        <Button x:Name="btnReproducir" Content="Reproducir" HorizontalAlignment="Left" Margin="48,38,0,0" VerticalAlignment="Top" Width="69" Height="23" Click="BtnReproducir_Click"/>
+        <Button x:Name="btnPausa" Content="Pausa" HorizontalAlignment="Left" Margin="160,38,0,0" VerticalAlignment="Top" Width="69" Height="23" Click="BtnPausa_Click"/>
+        <Button x:Name="btnDetener" Content="Detener" HorizontalAlignment="Left" Margin="264,38,0,0" VerticalAlignment="Top" Width="69" Height="23" Click="BtnDetener_Click"/>
         <TextBlock x:Name="lblTiempoActual" HorizontalAlignment="Left" Margin="48,82,0,0" TextWrapping="Wrap" Text="00:00:00" VerticalAlignment="Top"/>
         <TextBlock x:Name="lblTiempoTotal" HorizontalAlignment="Left" Margin="402,82,0,0" TextWrapping="Wrap" Text="00:00:00" VerticalAlignment="Top"/>
         <Slider x:Name="sldTiempo" HorizontalAlignment="Left" Margin="48,116,0,0" VerticalAlignment="Top" Width="398"/>
